<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context=".Hobbies">

    <FrameLayout
        android:layout_width="361dp"
        android:layout_height="635dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="133dp"
            tools:layout_editor_absoluteX="1dp">

            <FrameLayout
                android:layout_width="359dp"
                android:layout_height="152dp"
                android:animateLayoutChanges="false"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.666"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="90dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="115.5dp"
                    android:fontFamily="@font/lato_bold"
                    android:text="SINGERS"
                    android:textAlignment="center"
                    android:textAllCaps="true"
                    android:textColor="#B30202"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/imageView12"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="40dp"
                    android:adjustViewBounds="false"
                    android:clickable="true"
                    android:focusable="true"
                    android:textAlignment="center"
                    app:srcCompat="@drawable/tame" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="110dp"
                    android:clickable="true"
                    android:contextClickable="true"
                    android:focusableInTouchMode="false"
                    android:fontFamily="@font/lato_italic"
                    android:soundEffectsEnabled="true"
                    android:text="@string/tame_impala"
                    android:textAlignment="center"
                    android:textColor="#FFFFFF"
                    android:textStyle="bold"
                    tools:text="Tame Impala" />

                <ImageView
                    android:id="@+id/imageView11"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_marginStart="145dp"
                    android:layout_marginTop="40dp"
                    android:contentDescription="@string/kendrick_lamar"
                    app:srcCompat="@drawable/kendrick" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="130dp"
                    android:layout_marginTop="110dp"
                    android:clickable="true"
                    android:contextClickable="true"
                    android:cursorVisible="false"
                    android:fontFamily="@font/lato_italic"
                    android:text="@string/kendrick_lamar"
                    android:textAlignment="center"
                    android:textColor="#FFFFFF"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/imageView13"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_marginStart="270dp"
                    android:layout_marginTop="40dp"
                    app:srcCompat="@drawable/week" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="255dp"
                    android:layout_marginTop="110dp"
                    android:fontFamily="@font/lato_italic"
                    android:text="@string/the_weeknd"
                    android:textAlignment="center"
                    android:textColor="#FFFFFF"
                    android:textStyle="bold" />
            </FrameLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="157dp"
            android:layout_marginTop="160dp"
            android:translationY="-25dp">

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="6dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="90dp"
                    android:layout_marginTop="5dp"
                    android:fontFamily="@font/lato_bold"
                    android:text="ALBUMS"
                    android:textAlignment="center"
                    android:textColor="#B30202"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/imageView14"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_marginStart="145dp"
                    android:layout_marginTop="40dp"
                    android:contentDescription="@string/alive"
                    app:srcCompat="@drawable/alive" />

                <ImageView
                    android:id="@+id/imageView15"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="40dp"
                    android:contentDescription="@string/damn"
                    app:srcCompat="@drawable/damn" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="110dp"
                    android:fontFamily="@font/lato_italic"
                    android:text=" DAMN            Kendrick Lamar"
                    android:textAlignment="center"
                    android:textAllCaps="false"
                    android:textColor="#FFFFFF"
                    android:textStyle="italic" />

                <ImageView
                    android:id="@+id/imageView16"
                    android:layout_width="70dp"
                    android:layout_height="69dp"
                    android:layout_marginStart="270dp"
                    android:layout_marginTop="40dp"
                    android:contentDescription="@string/rumours"
                    app:srcCompat="@drawable/rumours" />

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="130dp"
                    android:layout_marginTop="110dp"
                    android:fontFamily="@font/lato_italic"
                    android:text="ALIVE 2007      Daft Punk"
                    android:textAlignment="center"
                    android:textColor="#FFFCFC"
                    android:textStyle="italic" />

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="255dp"
                    android:layout_marginTop="110dp"
                    android:fontFamily="@font/lato_italic"
                    android:text=" Rumours Fleetwood Mac"
                    android:textAlignment="center"
                    android:textColor="#FFFFFF"
                    android:textStyle="italic" />

            </FrameLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="157dp"
            android:layout_marginTop="320dp"
            android:translationY="-20dp">

            <TextView
                android:id="@+id/textView9"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="100dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="100dp"
                android:fontFamily="@font/lato_bold"
                android:text="WRITERS"
                android:textAlignment="center"
                android:textColor="#B30202"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imageView17"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="40dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/bukowski" />

            <ImageView
                android:id="@+id/imageView18"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginTop="40dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/camus" />

            <ImageView
                android:id="@+id/imageView19"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.963"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/hesse" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="110dp"
                android:fontFamily="@font/lato_italic"
                android:text="Charles Bukowski"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textStyle="italic"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="110dp"
                android:fontFamily="@font/lato_italic"
                android:text="Albert Camus"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textStyle="italic"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="110dp"
                android:layout_marginEnd="10dp"
                android:fontFamily="@font/lato_italic"
                android:text="Hermann Hesse"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textStyle="italic"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.98"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="148dp"
            android:layout_marginTop="480dp"
            android:translationY="-20dp">

            <TextView
                android:id="@+id/play"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="50dp"
                android:clickable="true"
                android:contextClickable="true"
                android:focusable="true"
                android:fontFamily="@font/roboto_black"
                android:text="@string/listen_my_playlist"
                android:textColor="#FFFFFF"
                android:textSize="30sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>